# SDL2Test

./: README.md
SDL2Test/: CMakeLists.txt  SDL2Test.sln
SDL2Test/SDL2Test/: SDL2Test.vcxproj  SDL2Test.vcxproj.filters  logger.h  sprite.cpp  test.cpp
SDL2Test/assets/: hatman.def  hatmanani.def  men.xcf  mm1.def  mm1ani.def  pickups.def  player1bind.def  player2bind.def  player3bind.def
SDL2Test/include/: animobj.h  collision.h  gfxtext.h  inputcfg.h  inputmap.h  menu.h  player.h  round.h  sprite.h  timekeep.h  txtlayer.h
SDL2Test/src/: animobj.cpp  collision.cpp  gfxtext.cpp  inputcfg.cpp  inputmap.cpp  logger.cpp  menu.cpp  player.cpp  sprite.cpp  test.cpp  timekeep.cpp  txtlayer.cpp
